# theme-config

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  README.md  RELEASE.md  __init__.py  pyproject.toml  tasks.py  theme_config.py
.github/workflows/: main.yml
pelican/plugins/theme_config/: __init__.py  theme_config.py
