[tool.poetry]
name = "pelican-theme-config"
version = "2.0.2"
description = "Pelican plugin to add footnotes to articles and pages"
authors = ["(GalaxyMaster) <galaxy4public+pypi@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["theme", "pelican", "plugin"]
repository = "https://github.com/pelican-plugins/theme-config"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/theme-config/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pelican = ">=4.5"
markdown = {version = ">=3.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^22"
flake8 = "^3.9"
flake8-black = "^0.3"
invoke = "^2.0"
isort = "^5.11"
markdown = "^3.2"
pytest = "^7.0"
pytest-cov = "^3.0"
pytest-pythonpath = "^0.7"
pytest-sugar = "^0.9"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Theme Config"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.isort]
profile = "black"
combine_as_imports = true

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
